--- a/requirements.txt
+++ b/requirements.txt
@@ -94,6 +94,7 @@ Pygments==2.18.0
 PyPika==0.48.9
 pyproject_hooks==1.1.0
 PySocks==1.7.1
+pysqlite3-binary
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
